<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zoom Bolivia</string>
    <string name="hello">hola</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main"></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_perfil">Mi Perfil</string>
    <string name="title_olvidocontracena"><u><b>Recuperar Contraseña</b></u></string>
    <string name="title_www"><u><b>www.zoom.bo</b></u></string>
    <string name="title_politicas"><u><b>Politicas de Seguridad</b></u></string>
    <string name="title_regitrarse"><u><b>Registrarse</b></u></string>
    <string name="title_separador"><b>|</b></string>
    <string name="title_activity_sitios">Mis Sitios</string>
    <string name="title_activity_favoritos">Mis Favoritos</string>
    <string name="title_activity_preferencias">Mis Preferencias</string>
    <string name="title_activity_acerca_zoom">Acerca Zoom</string>
    <string name="title_activity_contactos">Mis Contactos</string>
    <string name="title_activity_eventos">Mis Eventos</string>
    <string name="title_activity_face">FaceActivity</string>
    <string name="title_conectarse"><b>Conectarse con:</b></string>
    <string name="title_direccion_domicilio">Dirección Domicilio</string>
    <string name="title_direccion_trabajo">Dirección Trabajo</string>
    <string name="title_guardar">Guardar</string>
    <string name="title_cancelar">Cancelar</string>
    <string name="title_agregar_lugares">Agregar Lugares</string>
    <string name="title_content_imagendescripcion"><b>www.zoom.bo:</b></string>
    <string name="title_contactos">Contactos</string>
    <string name="title_grupos">Grupos</string>
    <string name="title_solicitudes">Solicitudes</string>
    <string name="title_aqui_escriba">Aqui escriba</string>
    <string name="title_lista_vacia">Lista Vacia</string>
    <string name="title_detalle_contacto">Detalle de Contacto</string>
    <string name="title_activity_servicio_ayuda">Servicio Ayuda</string>
    <string name="title_activity_recuperarcontrasena">Recuperar Contrasena</string>
    <string name="title_activity_lugares">Mis Direcciones</string>
    <string name="title_informacion">Información</string>
    <string name="title_recuperarcontracena_msj_envio">Mensaje fue enviado exitosamente.\nVerifíque su correo Electrónico</string>
    <string name="title_recuperarcontracena_msj_no_envio">Mensaje no fue enviado exitosamente.\nVerifíque su correo Electrónico</string>
    <string name="title_activity_contacto">Buscar Contactos</string>
    <string name="title_activity_soliucitudes">Mis Solicitudes</string>
    <string name="title_activity_detalle_contacto">Detalle de Contacto</string>
    <string name="title_categorias">Categorias</string>
    <string name="title_activity_search">Busqueda</string>
    <string name="title_filtrar">Herramienta de Busqueda</string>
    <string name="title_fecha">Fecha</string>
    <string name="title_categoria">Categoria</string>
    <string name="title_texto">Texto</string>
    <string name="title_buscar">Buscar</string>

    <!-- Api de facebook -->

    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="publish_feed">Publish feed</string>
    <string name="publish_story">Publish story</string>
    <string name="invite_all">Invite all</string>
    <string name="invite_one">Invite one</string>
    <string name="invite_suggested">Invite suggested</string>
    <string name="get_my_profile">Get my profile</string>
    <string name="get_my_profile_with_properties">Get my profile (Properties)</string>
    <string name="get_friends">Get friends</string>
    <string name="get_friends_with_properties">Get friends (Properties)</string>
    <string name="fb_feed_caption">Know who are your best friends</string>
    <string name="fb_feed_description">With Besties, the exciting new social game, you will be able to find out how truly do you know your friends</string>
    <!-- <string name="fb_feed_link">https://play.google.com/store/apps/details?id=com.besties</string> -->
    <string name="fb_feed_link">https://play.google</string>
    <string name="fb_feed_name">Besties</string>
    <string name="fb_feed_message">Who dare to be my opponent? :)</string>
    <string name="fb_feed_image">http://romkuapps.com/Apps/Socialist/blue_version_2.png</string>
    <string name="fragment_example_">Fragment example >></string>
    <string name="publish_photo">Publish photo</string>
    <string name="get_albums">Get albums</string>
    <string name="title_activity_map_direciones_">Nueva Dirección</string>
    <string name="title_activity_favoritos_">Mis Preferidos</string>
    <string name="title_activity_mis__favoritos1_">Mis Favoritos</string>

</resources>