<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactosActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/contactos"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/solicitudes"
            android:background="@drawable/redondeadobotton"
            android:drawableLeft="@drawable/succe"
            android:onClick="crearcontactos"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/title_contactos"
            android:textColor="@color/blanco"
            android:textSize="12sp" />

        <Button
            android:id="@+id/solicitudes"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/redondeadobotton"
            android:drawableLeft="@drawable/succe"
            android:onClick="crearsolicitud"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/title_solicitudes"
            android:textColor="@color/blanco"
            android:textSize="12sp" />

        <Button
            android:id="@+id/grupos"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/solicitudes"
            android:background="@drawable/redondeadobotton"
            android:drawableLeft="@drawable/succe"
            android:onClick="validardatos"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/title_grupos"
            android:textColor="@color/blanco"
            android:textSize="12sp" />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/expandableListView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="20dp" >
    </ExpandableListView>

</RelativeLayout>