<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- s -->


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="25dp"
            android:layout_toLeftOf="@+id/txt_nombre"
            android:background="@drawable/redondeadobotton"
            android:drawableLeft="@drawable/fail"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/title_cancelar"
            android:textColor="@color/blanco" />

        <Button
            android:id="@+id/btn_guardar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/txt_nombre"
            android:background="@drawable/redondeadobotton"
            android:drawableLeft="@drawable/success"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/title_guardar"
            android:textColor="@color/blanco" />
    </RelativeLayout>

    <EditText
        android:id="@+id/txt_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/redondeado"
        android:drawableLeft="@drawable/p_location"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="textCapWords"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColor="@color/negro"
        android:textColorHint="@color/colorhint"
        android:textSize="18sp" >
    </EditText>

    <ImageView
        android:id="@+id/img_ping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/title_content_imagendescripcion"
        android:src="@drawable/pinggoogle" />

</RelativeLayout>